# JittorInfer

./: run.sh
configs/: config_Qwen2.5.yaml  config_Qwen2.yaml
ggml/src/ggml-cann/: aclnn_ops.cpp
src/: CMakeLists.txt  llama-graph-builder.cpp  llama-graph-qwen2.cpp  llama-graph-qwen2.h  llama-hparams.cpp  llama-model.cpp  llama-vocab.cpp
tests/main/: multi_sequence.cpp  single_sequence.cpp
tests/rope/: CMakeLists.txt  cann_rope_aclnn.cpp  rope_cpu.cpp  rope_cpu.h
